--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c9c8005",
+   "id": "eff41dac",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1286,7 +1286,7 @@
     "\n",
     "\n",
     "    #-------------------------------#\n",
-    "    # SETUP ES e KIBANA🎬           #\n",
+    "    # SETUP ES e KIBANA  👨‍🏫        #\n",
     "    #-------------------------------#\n",
     "    setup:\n",
     "      image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}\n",
@@ -1342,7 +1342,7 @@
     "            - tap\n",
     "\n",
     "    #-------------------------------#\n",
-    "    # ELASTIC SEARCH  🎬           #\n",
+    "    # ELASTIC SEARCH  💾           #\n",
     "    #-------------------------------#\n",
     "    es01:\n",
     "      depends_on:\n",
@@ -1393,7 +1393,7 @@
     "\n",
     "\n",
     "    #-------------------------------#\n",
-    "    # KIBANA🎬                      #\n",
+    "    # KIBANA   📺                   #\n",
     "    #-------------------------------#\n",
     "    kibana:\n",
     "      depends_on:\n",
