--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "### Obiettivo\n",
     "L'obiettivo ultimo è creare una dashboard in Kibana che permetta di vedere per ogni lingua il numero medio di errori grammaticali in un testo. <br>\n",
-    "Come sorgente dati si userà Twitter; la sorgente di testi in tempo reale per eccellenza. <br>"
+    "Come sorgente dati si userà Twitter; un'ottima sorgente di testi in tempo reale per eccellenza. <br>"
    ]
   },
   {
@@ -266,7 +266,7 @@
     }
    },
    "source": [
-    "Da Logstash come già detto passeremo i dati al tool Kafka che si occuperà di creare un canale affidabile tra il servizio di data ingestion e il servizio di data processing (Spark) <br>\n",
+    "Da Logstash, come già detto, passeremo i dati al tool Kafka che si occuperà di creare un canale affidabile tra il servizio di data ingestion e il servizio di data processing (Spark) <br>\n",
     "Quello che faremo sarà sostanzialemente creare 4 container: \n",
     ">\n",
     "> - kafkaserver: è il cuore del servizio, crea un server di ascolto per i dati in entrata\n",
@@ -729,7 +729,7 @@
     }
    },
    "source": [
-    "Per creare il container lo script python è conservato insieme un dockerfile che si occupa di scaricare le librerie necessarie e fare una spark-submit dello script python per poterlo utilizzare nel cluster Spark. <br>"
+    "Per creare il container lo script python è conservato insieme ad un dockerfile che si occupa di scaricare le librerie necessarie e fare una spark-submit dello script python per poterlo utilizzare nel cluster Spark. <br>"
    ]
   },
   {
@@ -819,7 +819,7 @@
     "        - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt\n",
     "        - xpack.security.transport.ssl.verification_mode=certificate\n",
     "        - xpack.license.self_generated.type=${LICENSE}\n",
-    "        - \"ES_JAVA_OPTS=-Xms1g -Xmx1g\"\n",
+    "        - \"ES_JAVA_OPTS=-Xms3g -Xmx3g\"\n",
     "      # mem_limit: ${MEM_LIMIT}\n",
     "      ulimits:\n",
     "        memlock:\n",
@@ -1398,7 +1398,7 @@
     "        - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt\n",
     "        - xpack.security.transport.ssl.verification_mode=certificate\n",
     "        - xpack.license.self_generated.type=${LICENSE}\n",
-    "        - \"ES_JAVA_OPTS=-Xms1g -Xmx1g\"\n",
+    "        - \"ES_JAVA_OPTS=-Xms3g -Xmx3g\"\n",
     "      # mem_limit: ${MEM_LIMIT}\n",
     "      ulimits:\n",
     "        memlock:\n",
