--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -1498,16 +1498,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1e92c8",
-   "metadata": {},
+   "id": "176d333b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## La dashboard finale"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45fa5522",
-   "metadata": {},
+   "id": "a87c51eb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Si riporta una breve spiegazione sulla dashboard finale ottenuta col servizio Kibana <br>\n",
     "**Nota: gli screenshot sono solo degli esempi, potrebbero riportare dati molto diversi da quelli attuali**"
@@ -1520,12 +1528,16 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6c73e2da",
-   "metadata": {},
+   "id": "712bd359",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Il seguente grafico pone sull'asse x le lingue e sull'asse y la media degli errori grammaticali\n",
     "![avgs.JPG](attachment:avgs.JPG)\n",
-    "Dal grafico si capisce che la lingua di codice \"km\" ha una media di errori grammaticali pari a 6 e così via per le altre lingue."
+    "Dal grafico si capisce che la lingua di codice \"km\" ha una media di errori grammaticali pari a 6 (circa) e così via per le altre lingue."
    ]
   },
   {
@@ -1535,8 +1547,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e8fccfcd",
-   "metadata": {},
+   "id": "9f868dd4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Anche in questo grafico rappresentiamo la media di errori grammaticali per lingua ma aggiungendo un'ulteriore dimensione: il tempo\n",
     "![avgs_overtime.JPG](attachment:avgs_overtime.JPG)"
@@ -1549,8 +1565,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cc8c1294",
-   "metadata": {},
+   "id": "7830f1a5",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "La seguente metrica non ci fa vedere altro se non il numero di tweets raccolti fino ad ora\n",
     "![count_of_tweets.JPG](attachment:count_of_tweets.JPG)"
@@ -1563,8 +1583,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ec0a90b4",
-   "metadata": {},
+   "id": "baa91819",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Sapendo il numero di tweets raccolti potrebbe essere utile conoscere la distribuzione in base alle lingue\n",
     "![distribution_of_tweets.JPG](attachment:distribution_of_tweets.JPG)\n",
@@ -1578,8 +1602,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5334c964",
-   "metadata": {},
+   "id": "bfc58f70",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Dopo un pò di raccolta si è notato che le 4 lingue in cui si scrive di più su Twitter sono: Inglese, Giapponese, Spagnolo e Arabo. Mostriamo dunque le medie di errori grammaticali per queste 4 lingue\n",
     "![most_important_avgs.JPG](attachment:most_important_avgs.JPG)"
@@ -1592,8 +1620,12 @@
     }
    },
    "cell_type": "markdown",
-   "id": "643a8477",
-   "metadata": {},
+   "id": "1c1883af",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Come ultimo grafico mostriamo un Tag Cloud Chart per vedere quali sono le parole più utilizzate su Twitter (ovviamente nelle lingue supportate dal tool di controllo grammaticale)\n",
     "![words_cloud.JPG](attachment:words_cloud.JPG)"
