--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176d333b",
+   "id": "44b712a6",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87c51eb",
+   "id": "d062f597",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1528,7 +1528,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "712bd359",
+   "id": "871f50f1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1547,7 +1547,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9f868dd4",
+   "id": "8fb96ad7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1565,7 +1565,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7830f1a5",
+   "id": "3d06ce2f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1583,7 +1583,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "baa91819",
+   "id": "fbb275f3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1602,14 +1602,14 @@
     }
    },
    "cell_type": "markdown",
-   "id": "bfc58f70",
+   "id": "91af9ae9",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "Dopo un pò di raccolta si è notato che le 4 lingue in cui si scrive di più su Twitter sono: Inglese, Giapponese, Spagnolo e Arabo. Mostriamo dunque le medie di errori grammaticali per queste 4 lingue\n",
+    "Dopo un pò di raccolta di tweets si è notato che le 4 lingue in cui si scrive di più su Twitter sono: Inglese, Giapponese, Spagnolo e Arabo. Mostriamo dunque le medie per queste 4 lingue\n",
     "![most_important_avgs.JPG](attachment:most_important_avgs.JPG)"
    ]
   },
@@ -1620,7 +1620,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1c1883af",
+   "id": "99657710",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
