--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -1536,7 +1536,7 @@
    },
    "source": [
     "Il seguente grafico pone sull'asse x le lingue e sull'asse y la media degli errori grammaticali\n",
-    "![avgs.JPG](attachment:avgs.JPG)\n",
+    "![avgs.JPG](attachment:avgs.JPG) <br>\n",
     "Dal grafico si capisce che la lingua di codice \"km\" ha una media di errori grammaticali pari a 6 (circa) e così via per le altre lingue."
    ]
   },
@@ -1591,7 +1591,7 @@
    },
    "source": [
     "Sapendo il numero di tweets raccolti potrebbe essere utile conoscere la distribuzione in base alle lingue\n",
-    "![distribution_of_tweets.JPG](attachment:distribution_of_tweets.JPG)\n",
+    "![distribution_of_tweets.JPG](attachment:distribution_of_tweets.JPG) <br>\n",
     "Ad esempio da questo screenshot si nota che dei 5738 tweets raccolti fino ad ora, il 42.28% è in lingua Inglese, il 31.04% è in Giapponese e così via"
    ]
   },
@@ -1609,7 +1609,7 @@
     }
    },
    "source": [
-    "Dopo un pò di raccolta di tweets si è notato che le 4 lingue in cui si scrive di più su Twitter sono: Inglese, Giapponese, Spagnolo e Arabo. Mostriamo dunque le medie per queste 4 lingue\n",
+    "Dopo un pò di raccolta di tweets si è notato che le 4 lingue in cui si scrive di più su Twitter sono: Inglese, Giapponese, Spagnolo e Arabo. Mostriamo dunque le medie per queste 4 lingue <br>\n",
     "![most_important_avgs.JPG](attachment:most_important_avgs.JPG)"
    ]
   },
@@ -1627,7 +1627,7 @@
     }
    },
    "source": [
-    "Come ultimo grafico mostriamo un Tag Cloud Chart per vedere quali sono le parole più utilizzate su Twitter (ovviamente nelle lingue supportate dal tool di controllo grammaticale)\n",
+    "Come ultimo grafico mostriamo un Tag Cloud Chart per vedere quali sono le parole più utilizzate su Twitter (ovviamente nelle lingue supportate dal tool di controllo grammaticale) <br>\n",
     "![words_cloud.JPG](attachment:words_cloud.JPG)"
    ]
   }
