--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Stream Processing per l'identificazione di Errori Grammaticali in varie lingue\n",
+    "# Stream Processing per la rilevazione di Errori Grammaticali in varie lingue\n",
     "### Progetto per il corso universitario Technologies for Advanced Programming AA 2021/22\n",
     "### Samuele Maria Gallina 1000001478"
    ]
