--- a/review/review.ipynb
+++ b/review/review.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "### Obiettivo\n",
     "L'obiettivo ultimo è creare una dashboard in Kibana che permetta di vedere per ogni lingua il numero medio di errori grammaticali in un testo. <br>\n",
-    "Come sorgente dati si userà Twitter; un'ottima sorgente di testi in tempo reale per eccellenza. <br>"
+    "Come sorgente dati si userà Twitter; un'ottima sorgente di testi in tempo reale <br>"
    ]
   },
   {
